--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"@sveltejs/adapter-auto": "^6.0.0",
 		"@sveltejs/kit": "^2.22.0",
 		"@sveltejs/vite-plugin-svelte": "^6.0.0",
+		"@types/d3": "^7.4.3",
 		"@types/node": "^22",
 		"eslint": "^9.22.0",
 		"eslint-config-prettier": "^10.0.1",
